[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reptyl"
version = "0.0.0.3"
description = "Reptyl is a cross-platform command line shell that supports execution of commands in natural language"
readme = "README.md"
authors = [{ name = "0ut0flin3", email = "0ut0flin3@protonmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["reptyl","shell","command-line","gpt-3","natural language"]
requires-python = ">=3"



dependencies = ["openai==0.26.1"]


[project.urls]
Homepage = "https://github.com/neuralshare/node"


