[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reptyl"
version = "2.0.0.1"
description = "Reptyl is free-to-use a cross-platform command line shell that supports execution of commands in natural language"
readme = "README.md"
authors = [{ name = "0ut0flin3", email = "0ut0flin3@protonmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["reptyl","shell","command-line","gpt-3","natural language"]
requires-python = ">=3"



dependencies = []


[project.urls]
Homepage = "https://github.com/0ut0flin3/Reptyl"


